<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".ManualInstrumentationActivity">

    <!-- TODO: clean up layout to adhere to rules
    https://github.com/umesh0492/android-guidelines/blob/master/project_and_code_guidelines.md
    -->

    <RelativeLayout
        android:id="@+id/scrollViewChild"
        style="?card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textFragmentHeader"
            style="?textLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/fragment_header_custom_actions" />

        <Button
            android:id="@+id/button_about_custom_events"
            style="?buttonDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textFragmentHeader"
            android:onClick="onButtonClick"
            android:text="@string/title_how_it_works"/>

        <EditText
            android:id="@+id/text_user_action_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_about_custom_events"
            style="?editTextBox"
            android:gravity="center_horizontal"
            android:hint="@string/user_action_name"
            android:text="@string/custom_user_action"/>

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_user_action_name"
            android:orientation="horizontal"
            style="?layoutRow">

            <Button
                android:id="@+id/button_create_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?buttonDefault"
                android:onClick="onButtonClick"
                android:text="@string/enter_action" />

            <Button
                android:id="@+id/button_close_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?buttonDefault"
                android:enabled="false"
                android:text="@string/leave_action"
                android:onClick="onButtonClick"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row1"
            android:orientation="horizontal"
            style="?layoutRow">

            <Button
                android:id="@+id/button_create_child_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?buttonDefault"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                android:text="@string/create_child_action"
                android:enabled="false"
                android:onClick="onButtonClick" />

            <Button
                android:id="@+id/button_close_child_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?buttonDefault"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                android:enabled="false"
                android:text="@string/close_child_action"
                android:onClick="onButtonClick" />
        </LinearLayout>

    <!--        <TextView-->
    <!--            android:id="@+id/textViewChildActionBanner"-->
    <!--            style="?textLarge"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:gravity="center_horizontal"-->
    <!--            android:text="@string/add_children" />-->

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row2"
        android:orientation="horizontal"
        style="?layoutRow">

        <Button
            android:id="@+id/button_send_web_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?buttonDefault"
            android:onClick="onButtonClick"
            android:enabled="false"
            android:text="@string/web_request" />

        <Button
            android:id="@+id/button_add_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?buttonDefault"
            android:onClick="onButtonClick"
            android:enabled="false"
            android:text="@string/dt_add_url" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row3"
        android:dropDownWidth="wrap_content"
        android:entries="@array/url_list"
        android:spinnerMode="dialog" />

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerUrl"
        android:orientation="horizontal"
        style="?layoutRow">

            <Button
                android:id="@+id/button_report_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                style="?buttonDefault"
                android:onClick="onButtonClick"
                android:enabled="false"
                android:text="@string/report_value" />

            <Button
                android:id="@+id/button_report_event"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                style="?buttonDefault"
                android:onClick="onButtonClick"
                android:enabled="false"
                android:text="@string/event" />

            <Button
                android:id="@+id/button_report_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                style="?buttonDefault"
                android:onClick="onButtonClick"
                android:enabled="false"
                android:text="@string/report_error" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>